// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receiptItems.remove > functionality > foreign receipt 1`] = `
{
  "deleted": {
    "receiptItems": {
      "id:3a1d473d-4610-4e99-bd6b-bbf7a915a391": undefined,
    },
  },
}
`;

exports[`receiptItems.remove > functionality > own receipt 1`] = `
{
  "deleted": {
    "receiptItems": {
      "id:de4fb403-feea-48c9-adce-0723a3cd011c": undefined,
    },
  },
}
`;
